2010-05-19  Uday S Reddy  <u.s.reddy@cs.bham.ac.uk>  (tiny change)

	* textmodes/fill.el (fill-region): Don't fill past the end (bug#6201).

2010-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-quoted-char): Resolve modifiers after key
	remapping (bug#6212).

2010-05-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tmm.el (tmm-prompt): Don't try to precompute bindings.
	(tmm-get-keymap): Compute shortcuts (bug#6171).

2010-05-10  Glenn Morris  <rgm@gnu.org>

	* desktop.el (desktop-save-buffer-p): Don't mistakenly include
	all dired buffers, even tramp ones.  (Bug#5755)  [Backport from trunk]

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-03  Chong Yidong  <cyd@stupidchicken.com>

	* international/mule.el (auto-coding-alist):  Only purecopy
	car of each item, not the whole list (Bug#6083).

2010-05-02  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el (js-mode): Make paragraph variables local before
	calling c-setup-paragraph-variables (Bug#6071).

2010-05-01  Eli Zaretskii  <eliz@gnu.org>

	* composite.el (compose-region, reference-point-alist): Fix typos
	in the doc strings.

2010-04-28  Alexander Klimov <alserkli@inbox.ru> (tiny change)

	* calc/calc-graph.el (calc-graph-plot): Use the proper form for
	gnuplot's "set" command.

2010-04-26  Juanma Barranquero  <lekktu@gmail.com>

	* abbrev.el (last-abbrev-text): Doc fix.
	(abbrev-prefix-mark): Don't escape parenthesis.

2010-04-24  Andreas Schwab  <schwab@linux-m68k.org>

	* composite.el (find-composition): Doc fix.

2010-04-24  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/sql.el (sql-electric-stuff): Fix typo in tag.
	(sql-oracle-program, sql-sqlite-options)
	(sql-query-placeholders-and-send): Doc fixes.
	(sql-set-product, sql-interactive-mode): Reflow docstrings.
	(sql-imenu-generic-expression, sql-buffer)
	(sql-mode-ansi-font-lock-keywords, sql-mode-oracle-font-lock-keywords)